--- a/Proyecto Grupo 7 Progra Avanzada/Views/Reportes/Index.cshtml
+++ b/Proyecto Grupo 7 Progra Avanzada/Views/Reportes/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="d-flex justify-content-between align-items-center mb-4">
     <h1 class="display-4">Reportes Mensuales</h1>
     <form asp-action="Generar" method="post">
-        <button type="submit" class="btn btn-success btn-lg">
+        <button type="submit" class="btn btn-gold btn-lg">
             <i class="fas fa-chart-line"></i> Generar / Actualizar Reportes
         </button>
     </form>
@@ -39,8 +39,8 @@
 }
 else
 {
-    <table class="table table-striped table-hover mt-3 shadow-sm">
-        <thead class="bg-dark text-white">
+    <table class="app-table table-hover">
+        <thead>
             <tr>
                 <th>Comercio</th>
                 <th>Cajas</th>
