--- a/Proyecto Grupo 7 Progra Avanzada/Views/Cajas/Details.cshtml
+++ b/Proyecto Grupo 7 Progra Avanzada/Views/Cajas/Details.cshtml
@@ -4,16 +4,13 @@
     ViewData["Title"] = "Detalles Caja";
 }
 
-<div class="card-gold shadow mt-4">
-
-    <div class="card-header custom-card-header-info text-center">
-        <h1 class="h3 mb-0">Detalles del Comercio</h1>
+<div class="card shadow p-4 mt-4">
+    <div class="card-header bg-info text-white text-center">
+        <h1 class="h3 mb-0">Detalles de la Caja</h1>
         <h4 class="mb-0">@Model.Nombre</h4>
     </div>
-
-    <div class="p-4">
+    <div class="card-body">
         <dl class="row">
-
             <dt class="col-sm-4 text-dark">ID de Comercio</dt>
             <dd class="col-sm-8">@Model.IdComercio</dd>
 
@@ -42,22 +39,16 @@
                                 ? Html.Raw("<span class='badge bg-success'><i class='fas fa-check-circle'></i> Activo</span>")
                                 : Html.Raw("<span class='badge bg-danger'><i class='fas fa-times-circle'></i> Inactivo</span>"))
             </dd>
-
         </dl>
     </div>
-
     <div class="card-footer text-center">
-        <a asp-action="Edit" asp-route-id="@Model?.IdComercio"
-           class="btn custom-btn-warning btn-lg mx-2">
+        <a asp-action="Edit" asp-route-id="@Model?.IdCaja" class="btn btn-warning btn-lg mx-2 text-dark">
             <i class="fas fa-edit"></i> Editar
         </a>
-
-        <a asp-action="Index"
-           class="btn custom-btn-secondary btn-lg mx-2">
+        <a asp-action="Index" class="btn btn-secondary btn-lg mx-2">
             <i class="fas fa-arrow-alt-circle-left"></i> Volver a la Lista
         </a>
     </div>
-
 </div>
 
 @section Scripts {
