--- a/Proyecto Grupo 7 Progra Avanzada/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Proyecto Grupo 7 Progra Avanzada/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,8 +5,8 @@
     ViewData["Title"] = "Iniciar Sesión";
 }
 
-<div class="card shadow p-4 mt-4 mx-auto" style="max-width: 450px;">
-    <div class="card-header bg-primary text-white text-center">
+<div class="card custom-card mt-4">
+    <div class="card-header custom-card-header-info text-center">
         <h1 class="h3 mb-0">@ViewData["Title"]</h1>
     </div>
     <div class="card-body">
@@ -32,7 +32,7 @@
                 </label>
             </div>
 
-            <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Ingresar</button>
+            <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-gold">Ingresar</button>
         </form>
     </div>
     <div class="card-footer text-center">
